Import of SAPER/NetworkInfo-Discovery-Rendezvous-0.06 from CPAN.
gitpan-cpan-distribution: NetworkInfo-Discovery-Rendezvous
gitpan-cpan-version:      0.06
gitpan-cpan-path:         SAPER/NetworkInfo-Discovery-Rendezvous-0.06.tar.gz
gitpan-cpan-author:       SAPER
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,9 @@
---- #YAML:1.0
+---
 name: NetworkInfo-Discovery-Rendezvous
-version: 0.05
+version: 0.06
 author:
-  - |-
-    Sébastien Aperghis-Tramoni <sebastien@aperghis.net>
-abstract: |-
-  NetworkInfo::Discovery extension to find Rendezvous services
+  - Sébastien Aperghis-Tramoni <sebastien@aperghis.net>
+abstract: NetworkInfo::Discovery extension to find Rendezvous services
 license: perl
 requires:
   Carp: 0
@@ -15,5 +13,5 @@ requires:
 provides:
   NetworkInfo::Discovery::Rendezvous:
     file: lib/NetworkInfo/Discovery/Rendezvous.pm
-    version: 0.05
-generated_by: Module::Build version 0.2607
+    version: 0.06
+generated_by: Module::Build version 0.2611
